--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -2,10 +2,10 @@
 # Replace placeholders with your actual credentials.
 
 [database]
-db_url = "postgresql://postgres:root@localhost:5432/sentiments"
+db_url = "Your url"
 
 [twitter]
-bearer_token = "AAAAAAAAAAAAAAAAAAAAAKq23QEAAAAAvHX9I3CrN6qtcumbKYyKVKGPME0%3DsuUmueQPsCrXIQYG9QGS14Jd8UYuqWxh8QyEpwjWgNIk1B7FNv"
+bearer_token = "Your token"
 
 [google_ai]
-api_key = "AIzaSyDWMwBI4ywxX5cz886lR2jb3QFnHPZPlZU"
+api_key = "Your key"
